Test Pathfinding for Shadows